# esed

./: .gitignore  .gitlab-ci.yml  .goreleaser.yml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: cli.rs  error.rs  input.rs  main.rs  unescape.rs
src/replacer/: mod.rs  validate.rs
