[package]
name = "esed"
version = "1.1.14"
edition = "2024"
authors = ["Gregory <gregory.mkv@gmail.com>", "github.com/pepa65"]
description = "Easy sed"
repository = "https://github.com/pepa65/esed"
documentation = "https://docs.rs/esed/"
readme = "README.md"
license = "MIT"
keywords = ["sd", "sed", "search", "replace", "regex"]
categories = ["command-line-utilities", "text-processing", "development-tools"]
rust-version = "1.86.0"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
clap = { version = "4.4.6", features = ["derive", "deprecated", "wrap_help"] }
regex = "1.10.2"
rayon = "1.8.0"
memmap2 = "0.9.0"
tempfile = "3.8.0"
thiserror = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
